# python-config-extensions

./: README.md  pyproject.toml
.github/workflows/: test.yml
src/config_extensions/: __about__.py  __init__.py  configuration.py  dynamicloading.py
