[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config-extensions"
dynamic = ["version"]
description = 'Python classes and modules that extend configuration support'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "0x6f677548 (Hugo Batista)"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/0x6f677548/python-config-extensions#readme"
Issues = "https://github.com/0x6f677548/python-config-extensions/issues"
Source = "https://github.com/0x6f677548/python-config-extensions"

[tool.hatch.version]
path = "src/config_extensions/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/config_extensions tests}"

[tool.coverage.run]
source_pkgs = ["config_extensions", "tests"]
branch = true
parallel = true
omit = [
  "src/config_extensions/__about__.py",
]

[tool.coverage.paths]
config_extensions = ["src/config_extensions", "*/python-config-extensions/src/config_extensions"]
tests = ["tests", "*/python-config-extensions/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
